--- a/css/utilities/borders.scss
+++ b/css/utilities/borders.scss
@@ -23,6 +23,7 @@
 .bordered {
   &--solid { border-style: solid; }
   &--light { border-color: $border-light; }
+  &--medium { border-color: $border-medium; }
 }
 
 // border-radius
