--- a/css/utilities/fonts.scss
+++ b/css/utilities/fonts.scss
@@ -1,6 +1,6 @@
 $fallback-fontlist: 'Helvetica', sans-serif;
 $font-families: ('Nunito Sans': 'nunito', 'Open Sans': 'open', 'Karla': 'karla');
-$font-sizes: 16 18 22 48;
+$font-sizes: 16 18 22 32 48;
 $font-weights: 300 400 700 800i;
 $font-styles: normal italic;
 
